--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "bulmaswatch": "^0.8.1",
     "classnames": "^2.2.6",
