--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "husky": "^4.2.5",
-    "react-hook-form": "^6.2.0"
+    "react-hook-form": "^6.2.0",
+    "redux-saga": "^1.1.3"
   }
 }
