--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ch-front",
+  "name": "rover-test",
   "version": "0.1.0",
   "private": true,
   "lint-staged": {
@@ -22,17 +22,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.2.10",
-    "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
-    "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "bulmaswatch": "^0.8.1",
     "classnames": "^2.2.6",
@@ -42,13 +37,8 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -71,10 +61,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "husky": "^4.2.5",
-    "react-hook-form": "^6.2.0",
-    "redux-saga": "^1.1.3"
   }
 }
